--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "todomvc-backbone",
+  "name": "backbone-custom-todo",
   "version": "0.0.0",
   "dependencies": {
     "backbone": "~1.1.1",
